src/objects/registrationcode__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <formula>Text(equipment__r.customer__r.area__c )</formula>
        <label>区域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CusSecondEmail__c</fullName>
        <formula>equipment__r.customer__r.secondperson__r.Email</formula>
        <label>#设备客户第二责任人邮箱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>equipment__r.customer__r.Name</formula>
        <label>#客户名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquOwnEmail__c</fullName>
        <formula>equipment__r.Owner:User.Email</formula>
        <label>#设备所有人邮箱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentName__c</fullName>
        <formula>equipment__r.product__r.Cname__c  + equipment__r.Name</formula>
        <label>#设备名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codenum__c</fullName>
        <label>申请例数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>注册码</relationshipLabel>
        <relationshipName>sBvN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>registrationcodedate__c</fullName>
        <label>到期时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>ORK剩余例数</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>shengyutianshu__c</fullName>
        <formula>registrationcodedate__c  - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>剩余天数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>注册码类别</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ORK</fullName>
                </value>
                <value>
                    <fullName>Presby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>注册码</label>
    <listViews>
        <fullName>A858</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>A858</value>
        </filters>
        <label>A858-上海新华医院</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer__c</columns>
        <columns>equipment__c</columns>
        <columns>NAME</columns>
        <columns>type__c</columns>
        <columns>registrationcodedate__c</columns>
        <columns>codenum__c</columns>
        <columns>remark__c</columns>
        <columns>shengyutianshu__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>M160</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M160</value>
        </filters>
        <label>M160-福州东南眼科医院</label>
    </listViews>
    <listViews>
        <fullName>M187</fullName>
        <columns>equipment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>type__c</columns>
        <columns>codenum__c</columns>
        <columns>registrationcodedate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M187</value>
        </filters>
        <label>M187-中研眼科医院</label>
    </listViews>
    <listViews>
        <fullName>M201</fullName>
        <columns>NAME</columns>
        <columns>registrationcodedate__c</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M201</value>
        </filters>
        <label>M201-大庆市人民医院</label>
    </listViews>
    <listViews>
        <fullName>M212</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M212</value>
        </filters>
        <label>M212-湘江爱尔</label>
    </listViews>
    <listViews>
        <fullName>M299</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M299</value>
        </filters>
        <label>M299-乐山市人民医院</label>
    </listViews>
    <listViews>
        <fullName>M451</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>equipment__c</columns>
        <columns>registrationcodedate__c</columns>
        <columns>type__c</columns>
        <columns>codenum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M451</value>
        </filters>
        <label>M451-深圳爱尔眼科医院</label>
    </listViews>
    <listViews>
        <fullName>M498</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>equipment__c</columns>
        <columns>registrationcodedate__c</columns>
        <columns>type__c</columns>
        <columns>codenum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M498</value>
        </filters>
        <label>M498-合肥新视界</label>
    </listViews>
    <listViews>
        <fullName>M537</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>equipment__c</columns>
        <columns>registrationcodedate__c</columns>
        <columns>type__c</columns>
        <columns>codenum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M537</value>
        </filters>
        <label>M537-渭南市中心医院</label>
    </listViews>
    <listViews>
        <fullName>M571</fullName>
        <columns>NAME</columns>
        <columns>registrationcodedate__c</columns>
        <columns>type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M571</value>
        </filters>
        <label>M571 杭州朝聚</label>
    </listViews>
    <listViews>
        <fullName>M706</fullName>
        <columns>NAME</columns>
        <columns>registrationcodedate__c</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M706</value>
        </filters>
        <label>M706-宝鸡市人民医院</label>
    </listViews>
    <listViews>
        <fullName>M801</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M801</value>
        </filters>
        <label>M801-无锡八院</label>
    </listViews>
    <listViews>
        <fullName>M913</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>equipment__c</columns>
        <columns>registrationcodedate__c</columns>
        <columns>type__c</columns>
        <columns>codenum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>M913</value>
        </filters>
        <label>M913-漯河中心医院</label>
    </listViews>
    <listViews>
        <fullName>S193</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>equipment__c</field>
            <operation>equals</operation>
            <value>S193</value>
        </filters>
        <label>S193-成都康桥</label>
    </listViews>
    <nameField>
        <label>注册码</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>注册码</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>